Use the more web-native /api/analytics/{user,log} instead of /api/{AnalyticsUser,AnalyticsLog} as API routes.
